kubernetes/apps/selfhosted/teslamate/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teslamate-fleet-key
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://teslamate.${DOMAIN_5}/.well-known/appspecific/com.tesla.3p.public-key.pem
spec:
  hostnames:
    - "teslamate.${DOMAIN_5}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: domain-5-subdomain-https
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/appspecific/com.tesla.3p.public-key.pem
        - path:
            type: Exact
            value: /access
      backendRefs:
        - name: teslamate
          port: 8080
